src/pages/FoodDetails.module.scss
@import "../assets/GlobalVariables.scss";

.container {
    width: var(--page-width);
    max-width: var(--page-max-width);
    display: flex;
    flex-direction: column;
    margin: 2rem auto 0 auto;
    z-index: 3;
    min-height: calc(100vh - $footbar-height - 2rem);
    justify-content: space-between;

    $font-size-large: 2rem;
    $font-size-medium: 1.4rem;
    $font-size-small: 1.2rem;

    .details-image__container {
        width: 100%;
        padding-top: 60%;
        position: relative;
        overflow: hidden;
        border-radius: 1rem;
        box-shadow: $drop_shadow;

        .details-image {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            object-fit: cover;
        }

        button {
            $margin: 1rem;
            $size: 3rem;

            border: none;
            border-radius: 0.8rem;
            width: $size;
            height: $size;
            position: absolute;
            top: $margin;
            left: $margin;
            background-color: rgba(255, 255, 255, 0.8);
            backdrop-filter: blur(0.5rem);
        }
    }

    .details-title {
        font-size: $font-size-large;
        font-family: $main-font;
        font-weight: bold;
        margin: 1rem 0;
        color: $color-dark;
    }

    .details-eta {
        color: $color-dark;
        font-family: $main-font;
        display: flex;
        flex-direction: row;
        gap: 0.4rem;

        span:nth-child(1) {
            color: $color-main;
            margin-right: 0.2rem;
        }
    }

    .details-price-quantity {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        margin: 1.2rem 0 1rem 0;

        .details-price {
            font-size: $font-size-large;
            font-family: $main-font;
            font-weight: bold;
            color: $color-main;

            &::after {
                content: " VNĐ";
                font-size: $font-size-small;
            }
        }
    }

    .details-description {
        color: $color-gray;
        font-family: $main-font;
        display: flex;
        flex-direction: row;
        gap: 0.4rem;
    }

    .add-to-cart-button {
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: #ff7f50;
        border: none;
        border-radius: 9999px;
        font-size: $font-size-small;
        font-weight: bold;
        margin: 2rem auto;
        padding: 0.8rem;
        bottom: 0;
        box-shadow: $drop_shadow;

        &:hover {
            background-color: lightsalmon;
        }

        .cart-icon {
            display: flex;
            justify-content: center;
            align-items: center;
            width: 1rem;
            height: 1rem;
            color: #ff7f50;
            background-color: white;
            align-items: center;
            justify-content: center;
            border-radius: 9999px;
            padding: 0.5rem;
            font-size: 1rem;
            margin-right: 0.5rem;
        }

        .cart-label {
            color: white;
            font-family: $main-font;
            margin-right: 0.3rem;
        }
    }
}

